# PIAIC-HACKATHON-1

./: .flake8  .gitignore  BETTER_AUTH_INTEGRATION_GUIDE.md  BUTTON_REDESIGN_SUMMARY.txt  COMPREHENSIVE_RAG_FIXES_FINAL.md  COMPRESS_VIDEO.sh  CORS_FIX_GUIDE.md  DEBUG_RAG_FIXES.md  DEPLOYMENT.md  DEPLOYMENT_READY.md  DESIGN_SYSTEM_QUICK_REFERENCE.md  DUAL_THEME_IMPLEMENTATION.md  FLASH_FIX_INSTRUCTIONS.md  GITHUB_PUSH_SETUP.md  HERO_SECTION_INDEX.md  HERO_SECTION_SETUP.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  MINIMALIST_BUTTON_REDESIGN.md  NAVBAR_AUTH_CODE_OVERVIEW.md  NAVBAR_AUTH_INTEGRATION_SUMMARY.md  NAVBAR_AUTH_SETUP.md  NAVBAR_AUTH_TEST.md  PHASE_3_IMPLEMENTATION_REPORT.md  PHASE_7_IMPLEMENTATION.md  PHASE_7_QUICK_START.md  PHASE_COMPLETION_SUMMARY.md  PUSH_TO_GITHUB.md  QUICKSTART.md  RAG_FIXES_COMPLETE.md  README.md  README_DEPLOYMENT.md  README_HERO_SECTION.md  READY_FOR_DEPLOYMENT.md  SETUP_CHECKLIST.md  START_HERE.md  TEST_ENDPOINTS.sh  THEME_SYSTEM_READY.md  THEME_TOGGLE_GUIDE.md  (+13 more)
.specify/memory/: constitution.md
.specify/tests/: 002-digital-twin.ini
Front-End-Book/: .env.example  .env.production  docusaurus.config.js  package-lock.json  package.json
Front-End-Book/docs/: intro.md
api/: _middleware.py  chat.py  init_db.py  personalize.py  requirements.txt  translate.py
api/auth/: signin.py  signup.py
backend/: .env.example  CHAT_API.md  Dockerfile  INGESTION.md  docker-compose.yml  requirements.txt
backend/app/: database.py  dependencies.py  main.py  models.py  schemas.py  security.py
backend/scripts/: chunking_strategy.py  content_parser.py  e2e_testing.py  embedding_pipeline.py  ingest_content.py  ingest_content_full.py  validate_setup.py
backend/tests/: test_auth.py
docker/: module-3.Dockerfile
docs/module-1/: chapter-1.md  glossary.md  intro.md
examples/: 1-hello-world-pub.py  README.md
module-4-vla/: .env.example  README.md  pyproject.toml  requirements.txt
module-4-vla/src/custom_msgs/: CMakeLists.txt  package.xml
module-4-vla/src/custom_msgs/msg/: ExecutedStep.msg  ExecutionStep.msg  ExecutionTrace.msg  TaskPlan.msg  VoiceCommand.msg
module-4-vla/src/executor_node/: package.xml
module-4-vla/src/llm_planner_node/: package.xml
module-4-vla/src/module_4_common/: __init__.py  common.py  data_models.py
module-4-vla/src/whisper_node/: package.xml
requirements/: module-3-base.txt  module-3-cloud.txt  module-3-dev.txt
ros2_ws/.colcon/: metadata.json
ros2_ws/src/isaac_ros_examples/: CMakeLists.txt  package.xml
scripts/: install-ros2-humble.sh  setup-colcon-workspace.sh  validate-examples.sh  validate_setup.sh  verify-installation.sh
specs/001-ros2-fundamentals/: plan.md  spec.md  tasks.md
specs/002-digital-twin/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-isaac-ai-brain/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-vla-capstone/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-rag-chatbot/: AUDIT_REPORT.md  CITATION_FIX_SUMMARY.md  IMPLEMENTATION_QUICKSTART.md  IMPLEMENTATION_SUMMARY.md  PLANNING_COMPLETE.md  README.md  data-model.md  plan.md  quickstart.md  research-implementation-mapping.md  research.md  spec.md  tasks.md
specs/006-urdu-translation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-better-auth-authentication/: plan.md  spec.md  tasks.md
src/: gpu_benchmark.py  hardware_check.py  logging_config.py  synthetic_data_utils.py
tests/: conftest.py  test_chapter_1.py  test_content_quality.py
(+302 files in other folders)
